data/contextbench_phase1/stripped/raw_transcripts/000172_8f6f5977.txt
STRIPPED RAW CLAUDE CODE TRAJECTORY
This transcript was rendered from original raw JSONL using the canonical ADP strip manifest.

[RAW line 4 USER]
PRIOR ISSUE METADATA
repo: psf/requests
instance_id: psf__requests-2317
base_commit: 091991be0da19de9108dbe5e3752917fea3d7fdc
problem_statement:
method = builtin_str(method) problem
In requests/sessions.py is a command:

method = builtin_str(method)
Converts method from
b’GET’
to
"b'GET’"

Which is the literal string, no longer a binary string.  When requests tries to use the method "b'GET’”, it gets a 404 Not Found response.

I am using python3.4 and python-neutronclient (2.3.9) with requests (2.4.3).  neutronclient is broken because it uses this "args = utils.safe_encode_list(args)" command which converts all the values to binary string, including method.

I'm not sure if this is a bug with neutronclient or a bug with requests, but I'm starting here.  Seems if requests handled the method value being a binary string, we wouldn't have any problem.

Also, I tried in python2.6 and this bug doesn't exist there. Some difference between 2.6 and 3.4 makes this not work right.
[RAW line 8 TOOL Bash]
find ./swebench_9_15 -type d -name "requests" | head -5
[RAW line 30 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/requests/sessions.py"
}
[RAW line 32 TOOL RESULT toolu_01LHT6ssgPh9GjjVK1u3PZMA]
     1→# -*- coding: utf-8 -*-
     2→
     3→"""
     4→requests.session
     5→~~~~~~~~~~~~~~~~
     6→
     7→This module provides a Session object to manage and persist settings across
     8→requests (cookies, auth, proxies).
     9→
    10→"""
    11→import os
    12→from collections import Mapping
    13→from datetime import datetime
    14→
    15→from .auth import _basic_auth_str
    16→from .compat import cookielib, OrderedDict, urljoin, urlparse, builtin_str
    17→from .cookies import (
    18→    cookiejar_from_dict, extract_cookies_to_jar, RequestsCookieJar, merge_cookies)
    19→from .models import Request, PreparedRequest, DEFAULT_REDIRECT_LIMIT
    20→from .hooks import default_hooks, dispatch_hook
    21→from .utils import to_key_val_list, default_headers, to_native_string
    22→from .exceptions import (
    23→    TooManyRedirects, InvalidSchema, ChunkedEncodingError, ContentDecodingError)
    24→from .structures import CaseInsensitiveDict
    25→
    26→from .adapters import HTTPAdapter
    27→
    28→from .utils import (
    29→    requote_uri, get_environ_proxies, get_netrc_auth, should_bypass_proxies,
    30→    get_auth_from_url
    31→)
    32→
    33→from .status_codes import codes
    34→
    35→# formerly defined here, reexposed here for backward compatibility
    36→from .models import REDIRECT_STATI
    37→
    38→
    39→def merge_setting(request_setting, session_setting, dict_class=OrderedDict):
    40→    """
    41→    Determines appropriate setting for a given request, taking into account the
    42→    explicit setting on that request, and the setting in the session. If a
    43→    setting is a dictionary, they will be merged together using `dict_class`
    44→    """
    45→
    46→    if session_setting is None:
    47→        return request_setting
    48→
    49→    if request_setting is None:
    50→        return session_setting
    51→
    52→    # Bypass if not a dictionary (e.g. verify)
    53→    if not (
    54→
[... truncated ...]
[RAW line 34 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/requests/compat.py"
}
[RAW line 35 TOOL RESULT toolu_014RhyLyZuQ7VSYJgyVYMPVZ]
     1→# -*- coding: utf-8 -*-
     2→
     3→"""
     4→pythoncompat
     5→"""
     6→
     7→from .packages import chardet
     8→
     9→import sys
    10→
    11→# -------
    12→# Pythons
    13→# -------
    14→
    15→# Syntax sugar.
    16→_ver = sys.version_info
    17→
    18→#: Python 2.x?
    19→is_py2 = (_ver[0] == 2)
    20→
    21→#: Python 3.x?
    22→is_py3 = (_ver[0] == 3)
    23→
    24→#: Python 3.0.x
    25→is_py30 = (is_py3 and _ver[1] == 0)
    26→
    27→#: Python 3.1.x
    28→is_py31 = (is_py3 and _ver[1] == 1)
    29→
    30→#: Python 3.2.x
    31→is_py32 = (is_py3 and _ver[1] == 2)
    32→
    33→#: Python 3.3.x
    34→is_py33 = (is_py3 and _ver[1] == 3)
    35→
    36→#: Python 3.4.x
    37→is_py34 = (is_py3 and _ver[1] == 4)
    38→
    39→#: Python 2.7.x
    40→is_py27 = (is_py2 and _ver[1] == 7)
    41→
    42→#: Python 2.6.x
    43→is_py26 = (is_py2 and _ver[1] == 6)
    44→
    45→#: Python 2.5.x
    46→is_py25 = (is_py2 and _ver[1] == 5)
    47→
    48→#: Python 2.4.x
    49→is_py24 = (is_py2 and _ver[1] == 4)   # I'm assuming this is not by choice.
    50→
    51→
    52→# ---------
    53→# Platforms
    54→# ---------
    55→
    56→
    57→# Syntax sugar.
    58→_ver = sys.version.lower()
    59→
    60→is_pypy = ('pypy' in _ver)
    61→is_jython = ('jython' in _ver)
    62→is_ironpython = ('iron' in _ver)
    63→
    64→# Assume CPython, if nothing else.
    65→is_cpython = not any((is_pypy, is_jython, is_ironpython))
    66→
    67→# Windows-based system.
    68→is_windows = 'win32' in str(sys.platform).lower()
    69→
    70→# Standard Linux 2+ system.
    71→is_linux = ('linux' in str(sys.platform).lower())
    72→is_osx = ('darwin' in str(sys.platform).lower())
    73→is_hpux = ('hpux' in str(sys.platform).lower())   # Complete guess.
    74→is_solaris = ('solar==' in str(sys.platform).lower())   # Complete guess.
    75→
    76→try:
    77→    import simplejson as json
    78→except (ImportError, SyntaxError):
    79→
[... truncated ...]
[RAW line 37 TOOL Grep]
{
  "output_mode": "files_with_matches",
  "path": "./swebench_9_15/testbed/requests",
  "pattern": "def to_native_string"
}
[RAW line 38 TOOL RESULT toolu_01XtWkqXqSpFpKNE4JgkavTk]
Found 1 file
requests/utils.py
[RAW line 40 TOOL Grep]
{
  "-A": 10,
  "output_mode": "content",
  "path": "./swebench_9_15/testbed/requests/utils.py",
  "pattern": "def to_native_string"
}
[RAW line 41 TOOL RESULT toolu_01B4W9aip8kvJzdy8c3cd9oq]
655:def to_native_string(string, encoding='ascii'):
656-    """
657-    Given a string object, regardless of type, returns a representation of that
658-    string in the native string type, encoding and decoding where necessary.
659-    This assumes ASCII unless told otherwise.
660-    """
661-    out = None
662-
663-    if isinstance(string, builtin_str):
664-        out = string
665-    else:
[RAW line 43 TOOL Grep]
{
  "-A": 20,
  "output_mode": "content",
  "path": "./swebench_9_15/testbed/requests/utils.py",
  "pattern": "def to_native_string"
}
[RAW line 44 TOOL RESULT toolu_01C5GUtNopbNsSnw8bbPBemU]
655:def to_native_string(string, encoding='ascii'):
656-    """
657-    Given a string object, regardless of type, returns a representation of that
658-    string in the native string type, encoding and decoding where necessary.
659-    This assumes ASCII unless told otherwise.
660-    """
661-    out = None
662-
663-    if isinstance(string, builtin_str):
664-        out = string
665-    else:
666-        if is_py2:
667-            out = string.encode(encoding)
668-        else:
669-            out = string.decode(encoding)
670-
671-    return out
672-
673-
674-def urldefragauth(url):
675-    """
[RAW line 50 TOOL Edit]
{
  "file_path": "./swebench_9_15/testbed/requests/sessions.py",
  "new_text_sha256": "fb3300eb09db5285d0f820c37342ebf8655ee62e85bfe8e4f96e18d3351f56a7",
  "old_text_sha256": "5aa67996b350984b107bb71f4b7cd0938ec63aec1b20fa341f30954f91dfbe8e"
}
[RAW line 55 TOOL Write]
{
  "content_sha256": "50ebd73866c2a484fa9f0d9a8db1426307b1dd4370448a31c9cda4836abfa90a",
  "file_path": "./swebench_9_15/test_fix.py"
}
[RAW line 59 TOOL Bash]
cd ./swebench_9_15 && python test_fix.py
[RAW line 60 TOOL RESULT toolu_01MPsxt8NTdsGVfoAnsXxScf]
Exit code 1
  File "test_fix.py", line 13
    print(f"Test 1 - String input: '{method1}' -> '{result1}'")
                                                             ^
SyntaxError: invalid syntax
[RAW line 62 TOOL Edit]
{
  "file_path": "./swebench_9_15/test_fix.py",
  "new_text_sha256": "873e82ab126150eaf67f6718d7fcee4b35906779dea6856195c3dd1d98e55830",
  "old_text_sha256": "889022afd3d3d0fc0bfc2e9960f449d7aabee812ab019c299dbf6e5925c575ca"
}
[RAW line 65 TOOL Bash]
cd ./swebench_9_15 && python test_fix.py
[RAW line 66 TOOL RESULT toolu_01QPCQkeFnWGNXxw8gJWz714]
Test 1 - String input: 'GET' -> 'GET'
Test 2 - Bytes input: GET -> 'GET'
Test 3 - Bytes input: POST -> 'POST'

All tests passed! The fix correctly handles both string and bytes inputs.
